assignment1-initial/src/main/mt22/parser/.antlr/MT22Parser.py
# Generated from d:/PPL_HCMUT/assignment1-initial/src/main/mt22/parser/MT22.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class MT22Parser ( Parser ):

    grammarFileName = "MT22.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'readInteger'", "'printInteger'", "'readFloat'", 
                     "'printFloat'", "'readBoolean'", "'printBoolean'", 
                     "'readString'", "'printString'", "'super'", "'preventDefault'", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'boolean'", 
                     "'integer'", "'string'", "'float'", "'void'", "'false'", 
                     "'true'", "'for'", "'while'", "'do'", "'function'", 
                     "'if'", "'else'", "'return'", "'auto'", "'break'", 
                     "'continue'", "'out'", "'of'", "'inherit'", "'array'", 
                     "'+'", "'-'", "'*'", "'/'", "'%'", "'!'", "'&&'", "'||'", 
                     "'=='", "'!='", "'='", "'<'", "'<='", "'>'", "'>='", 
                     "'::'", "'('", "')'", "'{'", "'}'", "'['", "']'", "'.'", 
                     "','", "';'", "':'", "<INVALID>", "'_'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "COMMENT", 
                      "INTLIT", "FLOATLIT", "BOOLLIT", "STRINGLIT", "ILLEGAL_ESCCAPE", 
                      "UNCLOSE_STRING", "BOOLEAN", "INTEGER", "STRING", 
                      "FLOAT", "VOID", "FALSE", "TRUE", "FOR", "WHILE", 
                      "DO", "FUNCTION", "IF", "ELSE", "RETURN", "AUTO", 
                      "BREAK", "CONTINUE", "OUT", "OF", "INHERIT", "ARRAY", 
                      "ADD", "SUB", "MUL", "DIV", "MOD", "NOT", "AND", "OR", 
                      "EQUAL", "NOT_EQUAL", "ASSIGN", "LT", "LE", "GT", 
                      "GE", "CONCAT", "Lb", "Rb", "LB", "RB", "LQB", "RQB", 
                      "DOT", "COMMA", "SEMI", "COLON", "IDENTIFIERS", "UNDERSCORE", 
                      "DIGIT", "NONZERO_DIGIT", "CHAR", "WS", "ERROR_CHAR" ]

    RULE_program = 0
    RULE_decllst = 1
    RULE_stat_list = 2
    RULE_statement = 3
    RULE_assign_stat = 4
    RULE_if_stat = 5
    RULE_for_stat = 6
    RULE_while_stat = 7
    RULE_dowhile_stat = 8
    RULE_break_stat = 9
    RULE_continue_stat = 10
    RULE_fucnt_stat = 11
    RULE_return_stat = 12
    RULE_blockstat = 13
    RULE_specialcall = 14
    RULE_readIntegerfun = 15
    RULE_printIntegerfun = 16
    RULE_readFloatfun = 17
    RULE_printFloatfun = 18
    RULE_readBooleanfun = 19
    RULE_printBooleanfun = 20
    RULE_readStringfun = 21
    RULE_printStringfun = 22
    RULE_superfun = 23
    RULE_preventDefaultfun = 24
    RULE_exprlst = 25
    RULE_exp = 26
    RULE_exp1 = 27
    RULE_exp2 = 28
    RULE_exp3 = 29
    RULE_exp4 = 30
    RULE_exp5 = 31
    RULE_exp6 = 32
    RULE_exp7 = 33
    RULE_subexp = 34
    RULE_functcall = 35
    RULE_vardecl = 36
    RULE_shortvardecl = 37
    RULE_assignvardecl = 38
    RULE_idendecl = 39
    RULE_funcdecl = 40
    RULE_para_list = 41
    RULE_para_pattern = 42
    RULE_type_decl = 43
    RULE_arraylit = 44
    RULE_array_access = 45
    RULE_all_t = 46
    RULE_atomic_t = 47
    RULE_void_t = 48
    RULE_auto_t = 49
    RULE_array_t = 50
    RULE_dimensionlist = 51

    ruleNames =  [ "program", "decllst", "stat_list", "statement", "assign_stat", 
                   "if_stat", "for_stat", "while_stat", "dowhile_stat", 
                   "break_stat", "continue_stat", "fucnt_stat", "return_stat", 
                   "blockstat", "specialcall", "readIntegerfun", "printIntegerfun", 
                   "readFloatfun", "printFloatfun", "readBooleanfun", "printBooleanfun", 
                   "readStringfun", "printStringfun", "superfun", "preventDefaultfun", 
                   "exprlst", "exp", "exp1", "exp2", "exp3", "exp4", "exp5", 
                   "exp6", "exp7", "subexp", "functcall", "vardecl", "shortvardecl", 
                   "assignvardecl", "idendecl", "funcdecl", "para_list", 
                   "para_pattern", "type_decl", "arraylit", "array_access", 
                   "all_t", "atomic_t", "void_t", "auto_t", "array_t", "dimensionlist" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    COMMENT=11
    INTLIT=12
    FLOATLIT=13
    BOOLLIT=14
    STRINGLIT=15
    ILLEGAL_ESCCAPE=16
    UNCLOSE_STRING=17
    BOOLEAN=18
    INTEGER=19
    STRING=20
    FLOAT=21
    VOID=22
    FALSE=23
    TRUE=24
    FOR=25
    WHILE=26
    DO=27
    FUNCTION=28
    IF=29
    ELSE=30
    RETURN=31
    AUTO=32
    BREAK=33
    CONTINUE=34
    OUT=35
    OF=36
    INHERIT=37
    ARRAY=38
    ADD=39
    SUB=40
    MUL=41
    DIV=42
    MOD=43
    NOT=44
    AND=45
    OR=46
    EQUAL=47
    NOT_EQUAL=48
    ASSIGN=49
    LT=50
    LE=51
    GT=52
    GE=53
    CONCAT=54
    Lb=55
    Rb=56
    LB=57
    RB=58
    LQB=59
    RQB=60
    DOT=61
    COMMA=62
    SEMI=63
    COLON=64
    IDENTIFIERS=65
    UNDERSCORE=66
    DIGIT=67
    NONZERO_DIGIT=68
    CHAR=69
    WS=70
    ERROR_CHAR=71

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def decllst(self):
            return self.getTypedRuleContext(MT22Parser.DecllstContext,0)


        def EOF(self):
            return self.getToken(MT22Parser.EOF, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_program




    def program(self):

        localctx = MT22Parser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 104
            self.decllst()
            self.state = 105
            self.match(MT22Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DecllstContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def decllst(self):
            return self.getTypedRuleContext(MT22Parser.DecllstContext,0)


        def vardecl(self):
            return self.getTypedRuleContext(MT22Parser.VardeclContext,0)


        def funcdecl(self):
            return self.getTypedRuleContext(MT22Parser.FuncdeclContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_decllst




    def decllst(self):

        localctx = MT22Parser.DecllstContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_decllst)
        try:
            self.state = 117
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 109
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
                if la_ == 1:
                    self.state = 107
                    self.vardecl()
                    pass

                elif la_ == 2:
                    self.state = 108
                    self.funcdecl()
                    pass


                self.state = 111
                self.decllst()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 115
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
                if la_ == 1:
                    self.state = 113
                    self.vardecl()
                    pass

                elif la_ == 2:
                    self.state = 114
                    self.funcdecl()
                    pass


                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Stat_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self):
            return self.getTypedRuleContext(MT22Parser.StatementContext,0)


        def stat_list(self):
            return self.getTypedRuleContext(MT22Parser.Stat_listContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_stat_list




    def stat_list(self):

        localctx = MT22Parser.Stat_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_stat_list)
        try:
            self.state = 123
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 25, 26, 27, 29, 31, 33, 34, 57, 65]:
                self.enterOuterAlt(localctx, 1)
                self.state = 119
                self.statement()
                self.state = 120
                self.stat_list()
                pass
            elif token in [58]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assign_stat(self):
            return self.getTypedRuleContext(MT22Parser.Assign_statContext,0)


        def vardecl(self):
            return self.getTypedRuleContext(MT22Parser.VardeclContext,0)


        def if_stat(self):
            return self.getTypedRuleContext(MT22Parser.If_statContext,0)


        def for_stat(self):
            return self.getTypedRuleContext(MT22Parser.For_statContext,0)


        def while_stat(self):
            return self.getTypedRuleContext(MT22Parser.While_statContext,0)


        def dowhile_stat(self):
            return self.getTypedRuleContext(MT22Parser.Dowhile_statContext,0)


        def break_stat(self):
            return self.getTypedRuleContext(MT22Parser.Break_statContext,0)


        def continue_stat(self):
            return self.getTypedRuleContext(MT22Parser.Continue_statContext,0)


        def fucnt_stat(self):
            return self.getTypedRuleContext(MT22Parser.Fucnt_statContext,0)


        def specialcall(self):
            return self.getTypedRuleContext(MT22Parser.SpecialcallContext,0)


        def return_stat(self):
            return self.getTypedRuleContext(MT22Parser.Return_statContext,0)


        def blockstat(self):
            return self.getTypedRuleContext(MT22Parser.BlockstatContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_statement




    def statement(self):

        localctx = MT22Parser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_statement)
        try:
            self.state = 137
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 125
                self.assign_stat()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 126
                self.vardecl()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 127
                self.if_stat()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 128
                self.for_stat()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 129
                self.while_stat()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 130
                self.dowhile_stat()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 131
                self.break_stat()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 132
                self.continue_stat()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 133
                self.fucnt_stat()
                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 134
                self.specialcall()
                pass

            elif la_ == 11:
                self.enterOuterAlt(localctx, 11)
                self.state = 135
                self.return_stat()
                pass

            elif la_ == 12:
                self.enterOuterAlt(localctx, 12)
                self.state = 136
                self.blockstat()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Assign_statContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ASSIGN(self):
            return self.getToken(MT22Parser.ASSIGN, 0)

        def exp(self):
            return self.getTypedRuleContext(MT22Parser.ExpContext,0)


        def SEMI(self):
            return self.getToken(MT22Parser.SEMI, 0)

        def IDENTIFIERS(self):
            return self.getToken(MT22Parser.IDENTIFIERS, 0)

        def array_access(self):
            return self.getTypedRuleContext(MT22Parser.Array_accessContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_assign_stat




    def assign_stat(self):

        localctx = MT22Parser.Assign_statContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_assign_stat)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 141
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.state = 139
                self.match(MT22Parser.IDENTIFIERS)
                pass

            elif la_ == 2:
                self.state = 140
                self.array_access()
                pass


            self.state = 143
            self.match(MT22Parser.ASSIGN)
            self.state = 144
            self.exp()
            self.state = 145
            self.match(MT22Parser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class If_statContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(MT22Parser.IF, 0)

        def Lb(self):
            return self.getToken(MT22Parser.Lb, 0)

        def exp(self):
            return self.getTypedRuleContext(MT22Parser.ExpContext,0)


        def Rb(self):
            return self.getToken(MT22Parser.Rb, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MT22Parser.StatementContext)
            else:
                return self.getTypedRuleContext(MT22Parser.StatementContext,i)


        def ELSE(self):
            return self.getToken(MT22Parser.ELSE, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_if_stat




    def if_stat(self):

        localctx = MT22Parser.If_statContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_if_stat)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 147
            self.match(MT22Parser.IF)
            self.state = 148
            self.match(MT22Parser.Lb)
            self.state = 149
            self.exp()
            self.state = 150
            self.match(MT22Parser.Rb)
            self.state = 151
            self.statement()
            self.state = 154
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.state = 152
                self.match(MT22Parser.ELSE)
                self.state = 153
                self.statement()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class For_statContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FOR(self):
            return self.getToken(MT22Parser.FOR, 0)

        def Lb(self):
            return self.getToken(MT22Parser.Lb, 0)

        def ASSIGN(self):
            return self.getToken(MT22Parser.ASSIGN, 0)

        def exp(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MT22Parser.ExpContext)
            else:
                return self.getTypedRuleContext(MT22Parser.ExpContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(MT22Parser.COMMA)
            else:
                return self.getToken(MT22Parser.COMMA, i)

        def Rb(self):
            return self.getToken(MT22Parser.Rb, 0)

        def statement(self):
            return self.getTypedRuleContext(MT22Parser.StatementContext,0)


        def IDENTIFIERS(self):
            return self.getToken(MT22Parser.IDENTIFIERS, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_for_stat




    def for_stat(self):

        localctx = MT22Parser.For_statContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_for_stat)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 156
            self.match(MT22Parser.FOR)
            self.state = 157
            self.match(MT22Parser.Lb)

            self.state = 158
            self.match(MT22Parser.IDENTIFIERS)
            self.state = 159
            self.match(MT22Parser.ASSIGN)
            self.state = 160
            self.exp()
            self.state = 161
            self.match(MT22Parser.COMMA)
            self.state = 162
            self.exp()
            self.state = 163
            self.match(MT22Parser.COMMA)
            self.state = 164
            self.exp()
            self.state = 165
            self.match(MT22Parser.Rb)
            self.state = 166
            self.statement()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class While_statContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WHILE(self):
            return self.getToken(MT22Parser.WHILE, 0)

        def Lb(self):
            return self.getToken(MT22Parser.Lb, 0)

        def exp(self):
            return self.getTypedRuleContext(MT22Parser.ExpContext,0)


        def Rb(self):
            return self.getToken(MT22Parser.Rb, 0)

        def statement(self):
            return self.getTypedRuleContext(MT22Parser.StatementContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_while_stat




    def while_stat(self):

        localctx = MT22Parser.While_statContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_while_stat)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 168
            self.match(MT22Parser.WHILE)
            self.state = 169
            self.match(MT22Parser.Lb)
            self.state = 170
            self.exp()
            self.state = 171
            self.match(MT22Parser.Rb)
            self.state = 172
            self.statement()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Dowhile_statContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DO(self):
            return self.getToken(MT22Parser.DO, 0)

        def blockstat(self):
            return self.getTypedRuleContext(MT22Parser.BlockstatContext,0)


        def WHILE(self):
            return self.getToken(MT22Parser.WHILE, 0)

        def Lb(self):
            return self.getToken(MT22Parser.Lb, 0)

        def exp(self):
            return self.getTypedRuleContext(MT22Parser.ExpContext,0)


        def Rb(self):
            return self.getToken(MT22Parser.Rb, 0)

        def SEMI(self):
            return self.getToken(MT22Parser.SEMI, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_dowhile_stat




    def dowhile_stat(self):

        localctx = MT22Parser.Dowhile_statContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_dowhile_stat)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 174
            self.match(MT22Parser.DO)
            self.state = 175
            self.blockstat()
            self.state = 176
            self.match(MT22Parser.WHILE)
            self.state = 177
            self.match(MT22Parser.Lb)
            self.state = 178
            self.exp()
            self.state = 179
            self.match(MT22Parser.Rb)
            self.state = 180
            self.match(MT22Parser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Break_statContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BREAK(self):
            return self.getToken(MT22Parser.BREAK, 0)

        def SEMI(self):
            return self.getToken(MT22Parser.SEMI, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_break_stat




    def break_stat(self):

        localctx = MT22Parser.Break_statContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_break_stat)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 182
            self.match(MT22Parser.BREAK)
            self.state = 183
            self.match(MT22Parser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Continue_statContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CONTINUE(self):
            return self.getToken(MT22Parser.CONTINUE, 0)

        def SEMI(self):
            return self.getToken(MT22Parser.SEMI, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_continue_stat




    def continue_stat(self):

        localctx = MT22Parser.Continue_statContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_continue_stat)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 185
            self.match(MT22Parser.CONTINUE)
            self.state = 186
            self.match(MT22Parser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Fucnt_statContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def functcall(self):
            return self.getTypedRuleContext(MT22Parser.FunctcallContext,0)


        def SEMI(self):
            return self.getToken(MT22Parser.SEMI, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_fucnt_stat




    def fucnt_stat(self):

        localctx = MT22Parser.Fucnt_statContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_fucnt_stat)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 188
            self.functcall()
            self.state = 189
            self.match(MT22Parser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Return_statContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def RETURN(self):
            return self.getToken(MT22Parser.RETURN, 0)

        def SEMI(self):
            return self.getToken(MT22Parser.SEMI, 0)

        def exp(self):
            return self.getTypedRuleContext(MT22Parser.ExpContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_return_stat




    def return_stat(self):

        localctx = MT22Parser.Return_statContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_return_stat)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 191
            self.match(MT22Parser.RETURN)
            self.state = 194
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [12, 13, 14, 15, 40, 44, 55, 57, 65]:
                self.state = 192
                self.exp()
                pass
            elif token in [63]:
                pass
            else:
                raise NoViableAltException(self)

            self.state = 196
            self.match(MT22Parser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockstatContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LB(self):
            return self.getToken(MT22Parser.LB, 0)

        def stat_list(self):
            return self.getTypedRuleContext(MT22Parser.Stat_listContext,0)


        def RB(self):
            return self.getToken(MT22Parser.RB, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_blockstat




    def blockstat(self):
